--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -76,7 +76,11 @@
       }
 
       a + a {
-        margin-left: 5rem;
+        margin-left: 2rem;
+
+        @include mq($from: tablet) {
+          margin-left: 5rem;
+        }
       }
     }
   }
