--- a/src/pages/so-gehts/erfolgreich-mobilisieren/table-of-contents/style.scss
+++ b/src/pages/so-gehts/erfolgreich-mobilisieren/table-of-contents/style.scss
@@ -6,18 +6,21 @@
   margin-left: -1.5rem;
   margin-right: -2.5rem;
   margin-top: -3rem;
-  padding: 1.5rem;
+  padding: 1.5rem 2.5rem;
   position: sticky;
   top: 1.5rem;
 
   @include mq($from: tablet) {
-    margin-left: -5.5rem;
-    margin-right: -6.5rem;
-    padding: 2.5rem 5.5rem;
+    margin-left: -2.5rem;
+    margin-right: -2.5rem;
+    margin-top: 0;
+    padding: 2.5rem;
   }
 
   @include mq($from: desktop) {
     background-color: transparent;
+    margin-left: 0;
+    margin-right: 0;
     margin-top: 2.5rem;
     padding: 0 0 0 4rem;
   }
